<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_grad_bg"
    android:padding="20dp"
    android:theme="@style/MaterialTheme"
    tools:context=".LoginScreenActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/txt_username"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:startIconContentDescription="@string/content_description_username"
        app:startIconDrawable="@drawable/ic_login_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/txt_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        app:startIconContentDescription="@string/content_description_password"
        app:startIconDrawable="@drawable/ic_login_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/sign_in_btn_colors"
        android:onClick="LogIn"
        android:text="@string/txt_btnlogin"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkStaySignedIn"
        app:strokeColor="@color/login_btn_stroke" />

    <TextView
        android:id="@+id/txtNoAcc"
        android:layout_width="96dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/login_nocc"
        app:layout_constraintEnd_toStartOf="@+id/txtSignup"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="SignIn"
        android:text="@string/login_signup"
        android:textColor="@color/sign_up_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtNoAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNoAcc"
        app:layout_constraintTop_toTopOf="@+id/txtNoAcc" />

    <CheckBox
        android:id="@+id/chkStaySignedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:buttonTint="@drawable/chkbox_color_selector"
        android:checked="false"
        android:text="@string/stay_signed_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="141dp"
        android:layout_height="149dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_icon_bg"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hearticon" />

</androidx.constraintlayout.widget.ConstraintLayout>