<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_2_background"
    tools:context=".SelectUserTypeActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Login"
        android:text="@string/txt_login_usertype"
        android:textColor="@color/sign_up_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtHaveAcc"
        app:layout_constraintTop_toTopOf="@+id/txtHaveAcc" />

    <TextView
        android:id="@+id/txtHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_have_acc_usertype"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDonee" />

    <TextView
        android:id="@+id/txtIntro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/txt_select_usertype_sentence1"
        android:textColor="@color/primaryTextColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDonee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/sign_in_btn_colors"
        android:onClick="goToDoneeRegScreen"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/txt_btn_donee"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDonor" />

    <Button
        android:id="@+id/btnDonor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/sign_in_btn_colors"
        android:onClick="goToDonorRegScreen"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/txt_btn_donor"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectUserType" />

    <TextView
        android:id="@+id/txtSelectUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_select_usertype_sentence2"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIntro1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIntro1" />

</androidx.constraintlayout.widget.ConstraintLayout>